<resources>
    <string name="app_name">FirstKotlin</string>
    <string name="zhang_jian">Zhang Jian</string>
    <string name="roll">Roll</string>
    <string name="data_bind">DataBind</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">test</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="material_design">Material Design</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="storage">storage</string>
    <string name="write">write</string>
    <string name="read">read</string>
    <string name="live_data">live data</string>
</resources>
